created getting started section

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -187,8 +187,9 @@
             </div>
           </div>
         <!-- end conten carousel -->
-
         </div>
+
+        <!-- Button Arrow -->
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
           <img src="Assets/icon_left_button.svg" alt="right-button" aria-hidden="true"/>
           <span class="visually-hidden">Previous</span>
@@ -199,6 +200,15 @@
         </button>
       </div>
 
+      </div>
+    </section>
+
+    <!-- Getting started section -->
+    <section id="getting-started">
+      <div class="container getting-started-content h-100" >
+        <h1>Sewa Mobil di Tangerang Sekarang</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <button class="btn btn-success">Mulai Sewa Mobil</button>
       </div>
     </section>
 
