--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -261,23 +261,23 @@
 
             <div class="accordion-item border">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
                   Apakah Ada biaya antar-jemput ?
                 </button>
               </h2>
-              <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                 <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</p>
               </div>
             </div>
 
             <div class="accordion-item border">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
                   Bagaimana jika terjadi kecelakaan ?
                 </button>
               </h2>
-              <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</>
+              <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.</>
               </div>
             </div>
             <!-- end accordion items -->
@@ -288,6 +288,42 @@
       </div>
     </section>
 
+    <!-- footer -->
+    <footer id="footer">
+      <div class="container d-flex flex-wrap justify-content-md-between h-100 ">
+        
+        <div class="" style="max-width: 268px;">
+          <p>Jalan Suroyo No. 161 Mayangan Kota Probolonggo 672000</p>
+          <p>binarcarrental@gmail.com</p>
+          <p>081-233-334-808</p>
+        </div>
+
+        <div>
+          <ul class="list-section">
+            <li><a>Our Services</a></li>
+            <li><a>Why Us</a></li>
+            <li><a>Testimonial</a></li>
+            <li><a>FAQ</a></li>
+          </ul>
+        </div>
+
+        <div class="social-media">
+          <p>Connect with us</p>
+          <div>
+            <img src="Assets/icon_facebook.svg"/>
+            <img src="Assets/icon_instagram.svg"/>
+            <img src="Assets/icon_twitter.svg"/>
+            <img src="Assets/icon_mail.svg"/>
+            <img src="Assets/icon_twitch.svg"/>
+          </div>
+        </div>
+
+        <div class="">
+          <p>Copyright Binar 2022</p>
+          <div class="logo"></div>
+        </div>
+      </div>
+    </footer>
 
 
     <!-- Package -->
