adding margin bottom for tag h2 in faq section

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -318,7 +318,7 @@
           </div>
         </div>
 
-        <div class="">
+        <div >
           <p>Copyright Binar 2022</p>
           <div class="logo"></div>
         </div>
