change position navbar from static to absolute

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/styles.css">
   </head>
 
-  <body>
+  <body >
     <!-- Navbar -->
-    <nav class="navbar bg-transparent navbar-expand-lg mt-3 ">
+    <nav class="navbar nav bg-transparent navbar-expand-lg mt-3 ">
       <div class="container">
         <a class="navbar-brand logo" href="#"></a>
 
