fixed card in why us section

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -112,7 +112,7 @@
         <p>Mengapa harus pilih Binar Car Rental ?</p>
         
         <div class="row why-us-items">
-          <div class="col-md card rounded-3">
+          <div class="col-md card rounded-3 h-100" >
             <div class="item">
               <img src="Assets/icon_complete.svg" alt="icons-complete"/>
               <h6 class="fw-bold">Mobil Lengkap</h6>
@@ -120,7 +120,7 @@
             </div>
           </div>
 
-          <div class="col-md card rounded-3">
+          <div class="col-md card rounded-3 h-100">
             <div class="item">
               <img src="Assets/icon_price.svg" alt="icons-complete"/>
               <h6 class="fw-bold">Harga Murah</h6>
@@ -128,7 +128,7 @@
             </div>
         </div>
 
-        <div class="col-md card rounded-3">
+        <div class="col-md card rounded-3 h-100">
           <div class="item">
             <img src="Assets/icon_24hrs.svg" alt="icons-complete"/>
             <h6 class="fw-bold">Layanan 24 Jam</h6>
@@ -136,7 +136,7 @@
           </div>
       </div>
 
-      <div class="col-md card rounded-3">
+      <div class="col-md card rounded-3 h-100">
         <div class="item">
           <img src="Assets/icon_professional.svg" alt="icons-complete"/>
           <h6 class="fw-bold">Sopir Profesional</h6>
