change class img in hero section

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -10,8 +10,8 @@
 
   <body >
     <!-- Navbar -->
-    <nav class="navbar nav bg-transparent navbar-expand-lg mt-3 ">
-      <div class="container">
+    <header class="navbar nav bg-transparent navbar-expand-lg mt-3 ">
+      <nav class="container">
         <a class="navbar-brand logo" href="#"></a>
 
         <!-- Hamburger Button-->
@@ -45,22 +45,23 @@
             </ul>
           </div>
         </div>
-      </div>
-    </nav>
+      </na>
+    </header>
 
+    <!-- Set up image hero  -->
+
+    <main>
     <!-- Hero Section -->
-    <section id="hero" >
-      <div class="container h-100 ">
-        <div class="row h-100" >
-          <!-- Hero text -->
-          <div class="col-md-6 my-auto text-hero" >
+    <section id="hero">
+      <div class="container-fluid h-100">
+        <div class="row h-100">
+          <div class="col-md-6 text-hero my-auto">
             <h1>Sewa & Rental Mobil Terbaik di kawasan Tangerang</h1>
             <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil Kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
             <button class="btn btn-success">Mulai Sewa Mobil</button>
           </div>
-          <!-- Img Hero -->
-          <div class="col-md-6 ">
-            <img src="Assets/img_car.png" class="img-hero position-absolute end-0 bottom-0"/>
+          <div class=" col-md-6 position-relative">
+            <img src="Assets/img_car.png" class="img-fluid position-absolute bottom-0 end-0"/>
           </div>
         </div>
       </div>
@@ -244,7 +245,7 @@
                 </button>
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</>
+                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</m>
               </div>
             </div>
 
@@ -277,7 +278,7 @@
                 </button>
               </h2>
               <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.</>
+                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.</s>
               </div>
             </div>
             <!-- end accordion items -->
@@ -287,6 +288,8 @@
         </div>
       </div>
     </section>
+
+    </main>
 
     <!-- footer -->
     <footer id="footer">
