--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -69,10 +69,10 @@
 
     <!-- Our Services Section -->
     <section id="services">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="Assets/img_service.png" alt="service-image" class="img-service"/>
+      <div class="container h-100">
+        <div class="row h-100">
+          <div class="col-md-6 h-100">
+            <img src="Assets/img_service.png" alt="service-image" class="img-fluid h-100"/>
           </div>
           <div class="col-md-6">
             <h2>Best Car Rental for any kind of trip in Tangerang !</h2>
