--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -10,12 +10,12 @@
 
   <body >
     <!-- Navbar -->
-    <header class="navbar nav bg-transparent navbar-expand-lg mt-3 ">
+    <!-- <header class="navbar nav bg-transparent navbar-expand-lg mt-3 ">
       <nav class="container">
-        <a class="navbar-brand logo" href="#"></a>
+        <a class="navbar-brand logo" href="#"></a> -->
 
         <!-- Hamburger Button-->
-        <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" style="width:50%;" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -36,32 +36,32 @@
               </li>
               <li class="nav-item pe-4">
                 <a class="nav-link " href="#">FAQ</a>
-              </li>
+              </li> -->
 
               <!-- Button -->
-              <li class="nav-item ">
+              <!-- <li class="nav-item ">
                 <a class="btn btn-success" href="#">Register</a>
               </li>
             </ul>
           </div>
         </div>
       </na>
-    </header>
+    </header> -->
 
     <!-- Set up image hero  -->
 
     <main>
     <!-- Hero Section -->
     <section id="hero">
-      <div class="container-fluid h-100">
-        <div class="row h-100">
+      <div class="container-fluid h-100 " >
+        <div class="row h-100 " >
           <div class="col-md-6 text-hero my-auto">
             <h1>Sewa & Rental Mobil Terbaik di kawasan Tangerang</h1>
             <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil Kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
             <button class="btn btn-success">Mulai Sewa Mobil</button>
           </div>
-          <div class=" col-md-6 position-relative">
-            <img src="Assets/img_car.png" class="img-fluid position-absolute bottom-0 end-0"/>
+          <div class=" col-md-6 position-relative container-image">
+            <img src="Assets/img_car.png" class="img-fluid "/>
           </div>
         </div>
       </div>
