--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -60,47 +60,45 @@
             <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil Kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
             <button class="btn btn-success">Mulai Sewa Mobil</button>
           </div>
-          <div class=" col-md-6 position-relative container-image">
-            <img src="Assets/img_car.png" class="img-fluid "/>
+          <div class=" col-md-6 position-relative container-image-hero">
+            <img src="Assets/img_car.png" alt="image-car" class="img-fluid "/>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Our Services Section -->
+ 
+    <!-- Our Services Section --> 
     <section id="services">
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-md-6 h-100">
-            <img src="Assets/img_service.png" alt="service-image" class="img-fluid h-100"/>
-          </div>
-          <div class="col-md-6">
-            <h2>Best Car Rental for any kind of trip in Tangerang !</h2>
-            <div>
-              <p>Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.</p>
-              <ul>
-                <li>
-                  <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
-                  <span>Sewa Mobil Dengan Supir di Bali 12 Jam</span>
-                </li>
-                <li>
-                  <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
-                  <span>Sewa Mobil Lepas Kunci di Bali 24 Jam</span>
-                </li>
-                <li>
-                  <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
-                  <span>Sewa Mobil Jangka Panjang Bulanan</span>
-                </li>
-                <li>
-                  <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
-                  <span>Gratis Antar - Jemput Mobil di Bandara</span>
-                </li>
-                <li>
-                  <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
-                  <span>Layanan Airport Transfer / Drop In Out</span>
-                </li>
-              </ul>
-            </div>
+      <div class="container container-services">
+        <div class="container-image-services">
+          <img  src="Assets/img_service.png" class="img-fluid">
+        </div>
+        <div class="container-text-services" >
+          <h2>Best Car Rental for any kind of trip in Tangerang !</h2>
+          <div>
+            <p>Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.</p>
+            <ul>
+              <li>
+                <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
+                <span>Sewa Mobil Dengan Supir di Bali 12 Jam</span>
+              </li>
+              <li>
+                <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
+                <span>Sewa Mobil Lepas Kunci di Bali 24 Jam</span>
+              </li>
+              <li>
+                <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
+                <span>Sewa Mobil Jangka Panjang Bulanan</span>
+              </li>
+              <li>
+                <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
+                <span>Gratis Antar - Jemput Mobil di Bandara</span>
+              </li>
+              <li>
+                <img src="Assets/icon_checklist.svg" alt="icon-checklist" class="icon-checklist"/>
+                <span>Layanan Airport Transfer / Drop In Out</span>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
