create responsive testimonial section

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -182,57 +182,51 @@
 
     <!-- Testimonial Section -->
     <section id="testimonial" class="mx-auto">
-      <div class="w-100 h-100">
+      <div class="container container-testimonial">
       <h2 class="text-center">Testimonial</h2>
       <p class="text-center">Berbagai review positif dari para pelanggan kami</p>
 
       <!-- carousel -->
-      <div id="carouselExample" class="carousel slide slider" >
-        <div class="carousel-inner h-100">
+      <div id="carouselExample" class="carousel slide " >
+        <div class="carousel-inner ">
           <!-- conten carousel  -->
-          <div class="carousel-item active h-100">
-            <div class="content-carousel h-100">
-              <img src="Assets/img_photo.png" alt="img-photo" style="max-width: 70px; max-height: 80px;"/>            
-              <div  class="rate-comment">
-                <img src="Assets/Rate.svg" alt="rate-star" class="img-fluid" style="width: 80px; height: 16px;" />
-                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
-                <p style="font-weight: 700;">John Dee 32, Bromo</p>
-              </div>
-            </div>
-          </div>
 
-          <div class="carousel-item  h-100">
-            <div class="content-carousel h-100">
-              <img src="Assets/img_photo.png" alt="img-photo" style="max-width: 70px; max-height: 80px;"/>            
-              <div  class="rate-comment">
-                <img src="Assets/Rate.svg" alt="rate-star" class="img-fluid" style="width: 80px; height: 16px;" />
-                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+          <!-- carouse1 -->
+          <div class="carousel-item active ">
+            <div class="content-carousel">
+              <img src="Assets/img_photo.png" alt="img-photo" class="img-photo"/>
+              <div class="testimonial-comment">
+              <img src="Assets/Rate.svg" alt="icon-rate" class="icon-rate"/>
+              <div >
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
                 <p style="font-weight: 700;">John Dee 32, Bromo</p>
               </div>
+              </div>
             </div>
-          </div>
+            </div>
 
-          <div class="carousel-item  h-100">
-            <div class="content-carousel h-100">
-              <img src="Assets/img_photo.png" alt="img-photo" style="max-width: 70px; max-height: 80px;"/>            
-              <div  class="rate-comment">
-                <img src="Assets/Rate.svg" alt="rate-star" class="img-fluid" style="width: 80px; height: 16px;" />
-                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
-                <p style="font-weight: 700;">John Dee 32, Bromo</p>
+            <!-- carousel2 -->
+            <div class="carousel-item">
+              <div class="content-carousel">
+                <img src="Assets/img_photo.png" alt="img-photo" class="img-photo"/>
+                <div class="testimonial-comment">
+                <img src="Assets/Rate.svg" alt="icon-rate" class="icon-rate"/>
+                <div >
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+                  <p style="font-weight: 700;">John Dee 32, Bromo</p>
+                </div>
+                </div>
               </div>
-            </div>
-          </div>
+              </div>
         <!-- end conten carousel -->
         </div>
 
         <!-- Button Arrow -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <img src="Assets/icon_left_button.svg" alt="right-button" aria-hidden="true"/>
-          <span class="visually-hidden">Previous</span>
+        <button class="carousel-control-prev button-arrow" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <img src="Assets/icon_left_button.svg" alt="right-button" aria-hidden="true" class="ic-arrow"/>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <img src="Assets/icon_right_button.svg" alt="right-button" aria-hidden="true"/>
-          <span class="visually-hidden">Previous</span>
+        <button class="carousel-control-next button-arrow" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <img src="Assets/icon_right_button.svg" alt="right-button" aria-hidden="true" class="ic-arrow"/>
         </button>
       </div>
 
