create responsive getting started section

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -235,7 +235,7 @@
 
     <!-- Getting started Section -->
     <section id="getting-started">
-      <div class="container getting-started-content h-100" >
+      <div class="container getting-started-content " >
         <h1>Sewa Mobil di Tangerang Sekarang</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         <button class="btn btn-success">Mulai Sewa Mobil</button>
