--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -244,11 +244,11 @@
     
     <!-- FAQ Section -->
     <section id="frequently-asked-question">
-      <div class="container h-100">
-        <div class="row h-100">
+      <div class="container  container-faq">
+        <div class="row">
         <div class="col-md-6">
           <h2>Frequently Asked Question</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p ">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         </div>
 
         <!-- accordion -->
@@ -258,56 +258,56 @@
             <!-- accordion items -->
             <div class="accordion-item border">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                <button class="accordion-button collapsed btn-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                   Apa saja syarat yang dibutuhkan ?
                 </button>
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                <p class="accordion-body dropdown-accordion text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam aspernatur fuga ducimus, nihil, amet distinctio sit dicta vero rerum alias nesciunt cupiditate voluptate labore blanditiis. </p>
               </div>
             </div>
 
             <div class="accordion-item border">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                <button class="accordion-button collapsed btn-accordion"  type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                   Berapa hari minimal sewa mobil lepas kunci ?
                 </button>
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</m>
+                <p class="accordion-body dropdown-accordion text-start" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam aspernatur fuga ducimus, nihil, amet distinctio sit dicta vero rerum alias nesciunt cupiditate voluptate labore blanditiis. </m>
               </div>
             </div>
 
             <div class="accordion-item border">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                <button class="accordion-button collapsed btn-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                   Berapa hari sebelumnya sabaiknya booking sewa mobil ?
                 </button>
               </h2>
               <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</p>
+                <p class="accordion-body dropdown-accordion text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam aspernatur fuga ducimus, nihil, amet distinctio sit dicta vero rerum alias nesciunt cupiditate voluptate labore blanditiis. </p>
               </div>
             </div>
 
             <div class="accordion-item border">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                <button class="accordion-button collapsed btn-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
                   Apakah Ada biaya antar-jemput ?
                 </button>
               </h2>
               <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</p>
+                <p class="accordion-body dropdown-accordion text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam aspernatur fuga ducimus, nihil, amet distinctio sit dicta vero rerum alias nesciunt cupiditate voluptate labore blanditiis. </p>
               </div>
             </div>
 
             <div class="accordion-item border">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                <button class="accordion-button collapsed btn-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
                   Bagaimana jika terjadi kecelakaan ?
                 </button>
               </h2>
               <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.</s>
+                <p class="accordion-body dropdown-accordion text-start">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.</s>
               </div>
             </div>
             <!-- end accordion items -->
@@ -317,7 +317,6 @@
         </div>
       </div>
     </section>
-
     </main>
 
     <!-- footer -->
