create responsive footer

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -256,9 +256,9 @@
           <div class="accordion accordion-flush  group-item-accordion" id="accordionFlushExample">
 
             <!-- accordion items -->
-            <div class="accordion-item border">
+            <div class="accordion-item border ">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed btn-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                <button class="accordion-button collapsed btn-accordion " type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                   Apa saja syarat yang dibutuhkan ?
                 </button>
               </h2>
@@ -321,26 +321,23 @@
 
     <!-- footer -->
     <footer id="footer">
-      <div class="container d-flex flex-wrap justify-content-md-between h-100 ">
-        
-        <div class="" style="max-width: 268px;">
+      <div class="container container-footer">
+        <div class="contact-footer">
           <p>Jalan Suroyo No. 161 Mayangan Kota Probolonggo 672000</p>
           <p>binarcarrental@gmail.com</p>
           <p>081-233-334-808</p>
         </div>
 
-        <div>
-          <ul class="list-section">
-            <li><a>Our Services</a></li>
-            <li><a>Why Us</a></li>
-            <li><a>Testimonial</a></li>
-            <li><a>FAQ</a></li>
-          </ul>
+        <div class="list-section">
+          <a href="#">Our Services</a>
+          <a href="#">Why Us</a>
+          <a href="#">Testimonial</a>
+          <a href="#">FAQ</a>
         </div>
 
         <div class="social-media">
           <p>Connect with us</p>
-          <div>
+          <div class="social-media-icon">
             <img src="Assets/icon_facebook.svg"/>
             <img src="Assets/icon_instagram.svg"/>
             <img src="Assets/icon_twitter.svg"/>
@@ -349,8 +346,8 @@
           </div>
         </div>
 
-        <div >
-          <p>Copyright Binar 2022</p>
+        <div>
+          <p>Copyright Binar 2023</p>
           <div class="logo"></div>
         </div>
       </div>
