uncommand navbar and fixed detail in navbar

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -10,12 +10,12 @@
 
   <body >
     <!-- Navbar -->
-    <!-- <header class="navbar nav bg-transparent navbar-expand-lg mt-3 ">
-      <nav class="container">
-        <a class="navbar-brand logo" href="#"></a> -->
+    <header class="navbar nav navbar-expand-lg ">
+      <nav class="container container-nav">
+        <a class="navbar-brand logo" href="#"></a>
 
         <!-- Hamburger Button-->
-        <!-- <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" style="width:50%;" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -36,24 +36,24 @@
               </li>
               <li class="nav-item pe-4">
                 <a class="nav-link " href="#">FAQ</a>
-              </li> -->
+              </li>
 
               <!-- Button -->
-              <!-- <li class="nav-item ">
+              <li class="nav-item ">
                 <a class="btn btn-success" href="#">Register</a>
               </li>
             </ul>
           </div>
         </div>
       </na>
-    </header> -->
+    </header>
 
     <!-- Set up image hero  -->
 
     <main>
     <!-- Hero Section -->
     <section id="hero">
-      <div class="container-fluid h-100 " >
+      <div class="container-fluid h-100 container-hero" >
         <div class="row h-100 " >
           <div class="col-lg-6 text-hero my-auto">
             <h1>Sewa & Rental Mobil Terbaik di kawasan Tangerang</h1>
