fixed highlight accordion in faq section

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -245,7 +245,7 @@
 
             <div class="accordion-item border">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed btn-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                <button class="btn-accordion accordion-button collapsed btn-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                   Berapa hari sebelumnya sabaiknya booking sewa mobil ?
                 </button>
               </h2>
@@ -272,7 +272,7 @@
                 </button>
               </h2>
               <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <p class="accordion-body dropdown-accordion text-start">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.</s>
+                <p class="accordion-body dropdown-accordion text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a maiores impedit neque enim, adipisci placeat voluptate amet! Ab voluptate nulla molestiae quia animi porro praesentium! Blanditiis similique suscipit molestias.</p>
               </div>
             </div>
             <!-- end accordion items -->
