--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -178,7 +178,7 @@
                 <img src="Assets/Rate.svg" alt="icon-rate" class="icon-rate"/>
                 <div >
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
-                  <p style="font-weight: 700;">John Dee 32, Bromo</p>
+                  <p class="fw-semibold"">John Dee 32, Bromo</p>
                 </div>
                 </div>
               </div>
