--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <header class="navbar nav navbar-expand-lg ">
       <nav class="container container-nav">
-        <a class="navbar-brand logo" href="#"></a>
+        <a class="navbar-brand logo" href="#">BCR</a>
 
         <!-- Hamburger Button-->
         <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -313,7 +313,7 @@
 
         <div>
           <p>Copyright Binar 2023</p>
-          <div class="logo"></div>
+          <div class="logo">BCR</div>
         </div>
       </div>
     </footer>
