create form input

--- a/challenge-02/filter-car-challenge/public/index.html
+++ b/challenge-02/filter-car-challenge/public/index.html
@@ -48,7 +48,10 @@
         </nav>
       </header>
 
-      <section id="hero">
+      <main class="position-relative " >
+
+      <!-- hero section -->
+      <section id="hero" >
         <div class="container-fluid h-100 container-hero" >
           <div class="row h-100 " >
             <div class="col-lg-6 text-hero my-auto">
@@ -62,6 +65,34 @@
           </div>
         </div>
       </section>
+
+      <!-- form input -->
+      <form class="container container-input shadow-lg">
+        <div class="input-item" >
+          <label>Test Driver</label>
+          <input class="border">
+        </div>
+
+        <div class="input-item">
+          <label>Tanggal</label>
+          <input class="border">
+        </div>
+
+        <div class="input-item">
+          <label>Waktu Jemput/Ambil</label>
+          <input class="border">
+        </div>
+        
+        <div class="input-item ">
+          <label>Jumlah Penumpang (Optional)</label>
+          <input class="border" placeholder="Jumlah Penumpang">
+        </div>
+
+        <div style="display: flex; justify-content: end; align-items: end;">
+        <button class="btn btn-success">Cari Mobil</button>
+       </div>
+      </form>
+    </main>
 
          <!-- footer -->
     <footer id="footer">
