create modal when click form input

--- a/challenge-02/filter-car-challenge/public/index.html
+++ b/challenge-02/filter-car-challenge/public/index.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+
+  <!-- modal -->
+  <!-- <div style="height: 100vh;width: 100%; position: fixed; z-index: 1; background: red;">oke</div> -->
+  <div class="modal-custom""></div>
       <!-- Navbar -->
       <header class="navbar nav navbar-expand-lg ">
         <nav class="container container-nav">
@@ -65,9 +68,8 @@
           </div>
         </div>
       </section>
-
       <!-- form input -->
-      <form class="container container-input shadow-lg" >
+      <form class="container container-input shadow-lg ">
 
         <!-- input Test drive -->
         <div class="input-item" >
@@ -88,7 +90,7 @@
         <!-- Input Time -->
         <div class="input-item">
           <label for="inputTime">Waktu Jemput/Ambil</label>
-          <select class="border">
+          <select type="" class="border">
             <option value="" disabled disabled selected>Pilih Waktu</option>
             <option value="">
               08.00
@@ -158,6 +160,7 @@
 
     <!-- package -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="scripts/modal.js"></script>
 
 
 </body>
