add landing page and add feature hero section button go to filterPage

--- a/challenge-02/filter-car-challenge/public/filterPage.html
+++ b/challenge-02/filter-car-challenge/public/filterPage.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/filterPage.css">
 </head>
 <body>
 
   <!-- modal -->
-  <!-- <div style="height: 100vh;width: 100%; position: fixed; z-index: 1; background: red;">oke</div> -->
+  
   <div class="modal-custom""></div>
       <!-- Navbar -->
       <header class="navbar nav navbar-expand-lg ">
@@ -60,7 +60,6 @@
             <div class="col-lg-6 text-hero my-auto">
               <h1>Sewa & Rental Mobil Terbaik di kawasan Tangerang</h1>
               <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil Kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
-              <button class="btn btn-success">Mulai Sewa Mobil</button>
             </div>
             <div class=" col-lg-6 position-relative container-image-hero">
               <img src="assets/img_car.png" alt="image-car" class="img-fluid "/>
@@ -118,9 +117,12 @@
 
         <!-- button submit -->
         <div style="display: flex; justify-content: end; align-items: end;">
-        <button class="btn btn-success">Cari Mobil</button>
+        <button type="submit" class="btn btn-success">Cari Mobil</button>
        </div>
       </form>
+
+
+      <!-- cars section -->
     </main>
 
          <!-- footer -->
@@ -161,6 +163,11 @@
     <!-- package -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   <script src="scripts/modal.js"></script>
+
+  <!-- <script src="scripts/app.example.js"></script>
+  <script src="scripts/car.example.js"></script>
+  <script src="scripts/binar.js"></script>
+  <script src="scripts/main.example.js"></script> -->
 
 
 </body>
