--- a/challenge-02/filter-car-challenge/public/index.example.html
+++ b/challenge-02/filter-car-challenge/public/index.example.html
@@ -19,9 +19,8 @@
     <div id="cars-container"></div>
 
     <!-- Example Javascript -->
-    <script type="text/javascript" src="./scripts/binar.js"></script>
-    <script type="text/javascript" src="./scripts/app.example.js"></script>
-    <script type="text/javascript" src="./scripts/car.example.js"></script>
-    <script type="text/javascript" src="./scripts/main.example.js"></script>
-  </body>
+     <script src="scripts/app.example.js"></script>
+  <script src="scripts/car.example.js"></script>
+  <script src="scripts/binar.js"></script>
+  <script src="scripts/main.example.js"></script>
 </html>
