--- a/challenge-02/filter-car-challenge/public/filterPage.html
+++ b/challenge-02/filter-car-challenge/public/filterPage.html
@@ -83,15 +83,19 @@
         <!-- Input Date -->
         <div class="input-item">
           <label for="inputDate">Tanggal</label>
-          <input id="inputDate" type="text" class="border" placeholder="Pilih Tanggal" onfocus="(this.type = 'date')">
+          <div class="wrapper-input border">
+            <input id="inputDate" type="text" class="border-0 w-100" placeholder="Pilih Tanggal" onfocus="(this.type = 'date')">
+            <img src="./assets/fi_calendar.svg">
+          </div>
         </div>
 
         <!-- Input Time -->
         <div class="input-item">
           <label for="inputTime">Waktu Jemput/Ambil</label>
-          <select id="inputTime" class="border">
+          <div class="wrapper-input border">
+          <select id="inputTime" class="border-0 w-100">
             <option value="" disabled disabled selected>Pilih Waktu</option>
-            <option value="08.00"">
+            <option value="08.00">
               08.00
             </option>
             <option value="09.00">
@@ -107,12 +111,18 @@
               12.00
             </option>
           </select>
+
+          <img src="./assets/fi_clock.svg"/>
+        </div>
         </div>
         
         <!-- input capacity -->
         <div class="input-item ">
           <label for="inputCapacity">Jumlah Penumpang (Optional)</label>
-          <input id="inputCapacity" type="number" min="0" max="6" class="border" placeholder="Jumlah Penumpang">
+          <div class="wrapper-input border">
+          <input id="inputCapacity" type="number" min="0" max="6" class="border-0 w-100" placeholder="Jumlah Penumpang">
+          <img src="./assets/fi_users.svg" >
+        </div>
         </div>
 
         <!-- button submit -->
@@ -120,6 +130,8 @@
         <button type="submit" class="btn btn-success">Cari Mobil</button>
        </div>
       </form>
+
+      <!-- Outputst -->
 
 
       <!-- cars section -->
