--- a/challenge-02/filter-car-challenge/public/filterPage.html
+++ b/challenge-02/filter-car-challenge/public/filterPage.html
@@ -51,10 +51,11 @@
         </nav>
       </header>
 
-      <main class="position-relative " >
 
+      <main>
+      <section class="position-relative " >
       <!-- hero section -->
-      <section id="hero" >
+      <div id="hero" >
         <div class="container-fluid h-100 container-hero" >
           <div class="row h-100 " >
             <div class="col-lg-6 text-hero my-auto">
@@ -66,7 +67,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
       <!-- form input -->
       <form class="container container-input shadow-lg ">
@@ -90,7 +91,7 @@
         </div>
 
         <!-- Input Time -->
-        <div class="input-item">
+        <div class="input-item" >
           <label for="inputTime">Waktu Jemput/Ambil</label>
           <div class="wrapper-input border">
           <select id="inputTime" class="border-0 w-100" required>
@@ -130,11 +131,17 @@
         <button type="submit" class="btn btn-success">Cari Mobil</button>
        </div>
       </form>
-
       <!-- Outputst -->
 
       <!-- cars section -->
-    </main>
+      </section>
+
+      
+      <div id="cars-container" class="container container-cars"></div>
+      <!-- <section></section> -->
+
+      <main>
+
 
          <!-- footer -->
     <footer id="footer">
@@ -172,13 +179,12 @@
 
 
     <!-- package -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> 
   <script src="scripts/formInput.js"></script>
-
-  <!-- <script src="scripts/app.example.js"></script>
+  <script src="scripts/app.example.js"></script>
   <script src="scripts/car.example.js"></script>
   <script src="scripts/binar.js"></script>
-  <script src="scripts/main.example.js"></script> -->
+  <script src="scripts/main.example.js"></script>
 
 
 </body>
