convert display grid to flex for class container input

--- a/challenge-02/filter-car-challenge/public/filterPage.html
+++ b/challenge-02/filter-car-challenge/public/filterPage.html
@@ -70,6 +70,7 @@
       </div>
 
       <!-- form input -->
+      
       <form class="container container-input shadow-lg ">
         <!-- input Test drive -->
         <div class="input-item" >
@@ -127,7 +128,7 @@
         </div>
 
         <!-- button submit -->
-        <div style="display: flex; justify-content: end; align-items: end;">
+        <div style="display: flex; align-items: end;">
         <button type="submit" class="btn btn-success">Cari Mobil</button>
        </div>
       </form>
