--- a/challenge-02/filter-car-challenge/public/filterPage.html
+++ b/challenge-02/filter-car-challenge/public/filterPage.html
@@ -53,7 +53,7 @@
 
 
       <main>
-      <section class="position-relative " >
+      <section class="position-relative" >
       <!-- hero section -->
       <div id="hero" >
         <div class="container-fluid h-100 container-hero" >
@@ -71,6 +71,7 @@
 
       <!-- form input -->
       
+      <div id="form">
       <form class="container container-input shadow-lg ">
         <!-- input Test drive -->
         <div class="input-item" >
@@ -129,9 +130,10 @@
 
         <!-- button submit -->
         <div style="display: flex; align-items: end;">
-        <button type="submit" class="btn btn-success">Cari Mobil</button>
+        <button class="btn btn-success">Cari Mobil</button>
        </div>
       </form>
+      </div>
       <!-- Outputst -->
 
       <!-- cars section -->
