add class container button

--- a/challenge-02/filter-car-challenge/public/filterPage.html
+++ b/challenge-02/filter-car-challenge/public/filterPage.html
@@ -129,7 +129,7 @@
         </div>
 
         <!-- button submit -->
-        <div style="display: flex; align-items: end;">
+        <div class="container-btn">
         <button class="btn btn-success">Cari Mobil</button>
        </div>
       </form>
