fixed bug button submit

--- a/challenge-02/filter-car-challenge/public/filterPage.html
+++ b/challenge-02/filter-car-challenge/public/filterPage.html
@@ -123,14 +123,14 @@
         <div class="input-item ">
           <label for="inputCapacity">Jumlah Penumpang (Optional)</label>
           <div class="wrapper-input border">
-          <input id="inputCapacity" type="number" min="0" max="6" class="border-0 w-100" placeholder="Jumlah Penumpang" value="0">
+          <input id="inputCapacity" type="number" min="0" max="6" class="border-0 w-100" placeholder="Jumlah Penumpang">
           <img src="./assets/fi_users.svg" >
         </div>
         </div>
 
         <!-- button submit -->
         <div class="container-btn">
-        <button id="btn-form" class="btn btn-success">Cari Mobil</button>
+        <button type="button" id="btn-form" class="btn btn-success">Cari Mobil</button>
        </div>
       </form>
       </div>
