--- a/challenge-02/filter-car-challenge/public/filter-page.html
+++ b/challenge-02/filter-car-challenge/public/filter-page.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Binar Car Rental</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/filterPage.css">
+  <link rel="stylesheet" href="css/filter-page.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
       <!-- Navbar -->
       <header class="navbar nav navbar-expand-lg ">
         <nav class="container container-nav">
-          <a class="navbar-brand logo" href="./landingPage.html">BCR</a>
+          <a class="navbar-brand logo" href="./index.html">BCR</a>
   
           <!-- Hamburger Button-->
           <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -183,7 +183,7 @@
 
     <!-- package -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> 
-  <script src="scripts/formInput.js"></script>
+  <script src="scripts/modal.js"></script>
   <script src="scripts/app.example.js"></script>
   <script src="scripts/car.example.js"></script>
   <script src="scripts/binar.js"></script>
