--- a/challenge-02/filter-car-challenge/public/index.html
+++ b/challenge-02/filter-car-challenge/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Binar Car Rental</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/landingPage.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
 
   <body >
@@ -56,7 +56,7 @@
           <div class="col-lg-6 text-hero my-auto">
             <h1>Sewa & Rental Mobil Terbaik di kawasan Tangerang</h1>
             <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil Kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
-              <a class="btn btn-success" href="./filterPage.html">Mulai Sewa Mobil</a>
+              <a class="btn btn-success" href="./filter-page.html">Mulai Sewa Mobil</a>
           </div>
           <div class=" col-lg-6 position-relative container-image-hero">
             <img src="assets/img_car.png" alt="image-car" class="img-fluid "/>
