--- a/challenge-02/filter-car-challenge/public/filter-page.html
+++ b/challenge-02/filter-car-challenge/public/filter-page.html
@@ -11,7 +11,7 @@
 
   <!-- modal -->
   
-  <div class="modal-custom""></div>
+  <div class="modal-custom"></div>
       <!-- Navbar -->
       <header class="navbar nav navbar-expand-lg ">
         <nav class="container container-nav">
@@ -184,10 +184,10 @@
     <!-- package -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> 
   <script src="scripts/modal.js"></script>
-  <script src="scripts/app.example.js"></script>
-  <script src="scripts/car.example.js"></script>
+  <script src="scripts/app.js"></script>
+  <script src="scripts/car.js"></script>
   <script src="scripts/binar.js"></script>
-  <script src="scripts/main.example.js"></script>
+  <script src="scripts/main.js"></script>
 
 
 </body>
